unpackaged/main/default/objects/Campaign/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <description>Formula revealing the unique Id of the current campaign. Hubspot form rcid

In System Use: Campaign Page Layout

External Systems Utilization: Hubspot</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>Formula revealing the unique Salesforce Id of the current campaign.</inlineHelpText>
    <label>Campaign Id</label>
    <type>Text</type>
</CustomField>