unpackaged/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Segmentation of the campaign for reporting.

In System Use: Campaign Layout, Report Type &#39;Campaigns with Campaign Members and Other&#39;.

External Systems Utilization: None</description>
    <inlineHelpText>Segmentation of the campaign for reporting.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Content</fullName>
                <isActive>false</isActive>
                <label>Content</label>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
                <isActive>false</isActive>
                <label>Demo Request</label>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
                <isActive>false</isActive>
                <label>Event</label>
            </value>
            <value>
                <fullName>Event-Hackathon</fullName>
            </value>
            <value>
                <fullName>Event-Other</fullName>
            </value>
            <value>
                <fullName>Event-Tradeshow</fullName>
            </value>
            <value>
                <fullName>Event-Webinar</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Out of Home</fullName>
                <isActive>false</isActive>
                <label>Out of Home</label>
            </value>
            <value>
                <fullName>Paid/Direct</fullName>
                <isActive>false</isActive>
                <label>Paid/Direct</label>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Sendoso</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
                <isActive>false</isActive>
                <label>Webinar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>