unpackaged/main/default/objects/Campaign/fields/Check_MQL_on_Member_Add__c.field-meta.xml
<CustomField>
    <fullName>Check_MQL_on_Member_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For RevOps Use Only. Indicates that SDRs will be following up with the campaign member.

In System Use: Flows - &#39;Campaign - After Save Automations&#39;, &#39;Campaign Member: After Save Automations&#39; 

External Systems Utilization: None</description>
    <inlineHelpText>For RevOps Use Only. Indicates that SDRs will be following up with the campaign member.</inlineHelpText>
    <label>Check MQL on Member Add</label>
    <type>Checkbox</type>
</CustomField>