unpackaged/main/default/objects/Campaign/fields/Creative__c.field-meta.xml
<CustomField>
    <fullName>Creative__c</fullName>
    <description>For reporting segmentation

in System Use -
Required field in Flow: &#39;Campaign - Create Campaign Button

External Systems Utilization: None</description>
    <inlineHelpText>For reporting segmentation</inlineHelpText>
    <label>Creative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Low Code</fullName>
            </value>
            <value>
                <fullName>Must Win</fullName>
            </value>
            <value>
                <fullName>Retargeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>