unpackaged/main/default/objects/Campaign/fields/Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stage__c</fullName>
    <description>For reporting segmentation

in System Use -
Required field in Flow: &#39;Campaign - Create Campaign Button

External Systems Utilization: None</description>
    <inlineHelpText>For reporting segmentation</inlineHelpText>
    <label>Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>