unpackaged/main/default/objects/Campaign/fields/Is_Attributable_Action__c.field-meta.xml
<CustomField>
    <fullName>Is_Attributable_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was used in Moment creation

In System Use:
Flows - Campaign - After Save Automations, Campaign Member - Before Save Automations

External Systems Utilization: None</description>
    <label>zOLDIs Attributable Action?</label>
    <type>Checkbox</type>
</CustomField>