unpackaged/main/default/objects/Campaign/fields/LeanData__Back_Dated__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Back_Dated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Managed field for Lean Data.</inlineHelpText>
    <label>Back-Dated</label>
    <type>Checkbox</type>
</CustomField>