unpackaged/main/default/objects/Campaign/fields/Moment_on_Member_Add__c.field-meta.xml
<CustomField>
    <fullName>Moment_on_Member_Add__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For RevOps Use Only. Part of the decision process for creating Moments.

In System Use:
Flows: Campaign - After Save Automations, Campaign Member: After Save Automations
Page Layout: Campaign
Report Type: Campaigns_with_Campaign_Members_and_Other

External Systems Utilization: None</description>
    <inlineHelpText>For RevOps Use Only. Part of the decision process for creating Moments.</inlineHelpText>
    <label>Moment on Member Add</label>
    <type>Checkbox</type>
</CustomField>