unpackaged/main/default/objects/Campaign/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>For reporting segmentation.

in System Use:  Flow: &#39;Campaign - Create Campaign Button

External Systems Utilization: None</description>
    <inlineHelpText>For reporting segmentation.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>