unpackaged/main/default/objects/Campaign/fields/Registration_Target__c.field-meta.xml
<CustomField>
    <fullName>Registration_Target__c</fullName>
    <description>In System Use: Report Type - Campaigns_with_Campaign_Members_and_Other

External Systems Utilization: None</description>
    <label>zOLDRegistration Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>