unpackaged/main/default/objects/Campaign/fields/Sendoso_Total_Spent_On_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Total_Spent_On_Campaign__c</fullName>
    <description>Total $ amount spent on Campaign through Sendoso.

In System Use: None

External Systems Utilization: Sendoso</description>
    <inlineHelpText>Total $ amount spent on Campaign through Sendoso.</inlineHelpText>
    <label>Sendoso: Total $ Spent On Campaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>