unpackaged/main/default/objects/Campaign/fields/Sequence_Definition__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Outreach sequence assigned to sales campaigns.

In System Use:
Layout	Sequence Definition Layout
ReportType	Campaigns_with_Campaign_Members_and_Other

External Systems Utilization: Outreach</description>
    <inlineHelpText>Outreach sequence assigned to sales campaigns.</inlineHelpText>
    <label>zOLDSequence Definition</label>
    <referenceTo>Sequence_Definition__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>