unpackaged/main/default/objects/Campaign/fields/splashthat__Splash_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Splash_Event_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Event Id in splash to map with corresponding campaign</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique, case sensitive Splash Id required for Splash campaigns.</inlineHelpText>
    <label>Splash Event ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>