unpackaged/main/default/objects/Campaign/fields/splashthat__Splash_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Splash_Event_Type__c</fullName>
    <description>Event Types in splash</description>
    <inlineHelpText>Splash Event Types automatically populated when the Splash Event Id is added to the campaign</inlineHelpText>
    <label>Splash Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Exhibits &amp; Shows</fullName>
            </value>
            <value>
                <fullName>Happy Hours</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>In-Store Engagement</fullName>
            </value>
            <value>
                <fullName>Launch Event</fullName>
            </value>
            <value>
                <fullName>Networking Event</fullName>
            </value>
            <value>
                <fullName>Recruiting Event</fullName>
            </value>
            <value>
                <fullName>Seminars &amp; Workshops</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>