unpackaged/main/default/objects/Campaign/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <description>For reporting segmentation

in System Use -
Required field in Flow: &#39;Campaign - Create Campaign Button

External Systems Utilization: None</description>
    <inlineHelpText>For reporting segmentation</inlineHelpText>
    <label>Target Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>