unpackaged/main/default/objects/Campaign/fields/Track_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Track_Campaign_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RevOps use only. If checked the Campaign Members list is available on the page layout.

In System Use: Flow: Campaign - Create Campaign Button

External Systems Utilization: None</description>
    <inlineHelpText>RevOps use only. Indicates if the campaign will be used for tracking campaign members.</inlineHelpText>
    <label>Track Campaign Members</label>
    <type>Checkbox</type>
</CustomField>