unpackaged/main/default/objects/Campaign/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>For reporting segmentation

in System Use -
Required field in Flow: &#39;Campaign - Create Campaign Button

External Systems Utilization: None</description>
    <inlineHelpText>For reporting segmentation</inlineHelpText>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ben&#39;s Bites</fullName>
            </value>
            <value>
                <fullName>Dzone</fullName>
            </value>
            <value>
                <fullName>Gartner</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>NDC Conferences</fullName>
            </value>
            <value>
                <fullName>Reddit</fullName>
            </value>
            <value>
                <fullName>Retool</fullName>
            </value>
            <value>
                <fullName>Smooth Media</fullName>
            </value>
            <value>
                <fullName>Superhuman AI</fullName>
            </value>
            <value>
                <fullName>The Neuron</fullName>
            </value>
            <value>
                <fullName>The Rundown AI</fullName>
            </value>
            <value>
                <fullName>TLDR</fullName>
            </value>
            <value>
                <fullName>Vendor Not Associated</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>