unpackaged/main/default/objects/Campaign/fields/Vendor_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Campaign_Id__c</fullName>
    <description>Tracks Ids of the Vendor associated with the campaign.

In System Use: Campaign Layout

External Systems Utilization: None</description>
    <inlineHelpText>Tracks Ids of the Vendor associated with the campaign.</inlineHelpText>
    <label>Vendor Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>