unpackaged/main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Channel__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Campaign_Id__c</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Initiative__c</field>
        <operation>equals</operation>
        <value>AI - New Logos</value>
    </filters>
    <label>All Active Campaigns</label>
</ListView>